# AlekseyMakarkin_Oct_16_android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/amakarkin/alanchallenge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioManager.cpp  AudioManager.h  EnergyCalc.cpp  native-lib.cpp  native.cpp  native.h
app/src/main/cpp/alanbase/src/: AlanBase.cpp  AlanBase.h  AlanFrame.cpp  AlanFrame.h  AsioHttp.cpp  AsioHttp.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  BaseLogger.cpp  BaseLogger.h  Buffer.h  Exception.h  FFMPEGHeaders.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
app/src/main/java/com/amakarkin/alanchallenge/base/: BaseMvpActivity.kt
app/src/main/java/com/amakarkin/alanchallenge/domain/: Recorder.kt
app/src/main/java/com/amakarkin/alanchallenge/presentation/: MainActivity.kt  MainPresenter.kt
app/src/main/res/drawable/: energy_meter.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/amakarkin/alanchallenge/: ExampleUnitTest.kt
